--- a/to-libs.mdx
+++ b/to-libs.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'When to Use Static Generation vs. Server-side Rendering'
+title: 'To libs'
 date: '2024-04-10'
 tags: ['next.js','nextjs','ssg','ssr']
 ---
 
-#Just to say how much I love you!!!
+# Just to say how much I love you!!!
 
 You are an amazing writer and a wonderful person
 
