Add changes to blog post about how amazing Evandro

--- a/nomedaLigia.mdx
+++ b/nomedaLigia.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'This is my New Article'
-date: '2023-04-18'
+title: 'Yayayayaya'
+date: '2024-04-17'
 tags: ['tag01','nextjs','new']
 ---
 
